Added custome class to change background color of Nav bar.

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+.bgColor_nav {
+  background-color: burlywood;
+}
+
 /* Sticky Footer in Footer Component */
 .footer {
   /* Main styling */
