Fixed second slide caption.

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
 }
 
 /* ---Carosel Component in Landing Page--- */
-.carosel_customSlide1 {
+.caption_Slide1 {
   top: 40%;
   bottom: auto;
   background-color: rgb(0, 0, 0, 0.7);
