--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,9 @@ body {
     top: 22%;
     bottom: auto;
     background-color: rgba(0, 0, 0, 0.7);
+
+    text-align: center;
+    padding-right: 0px;
   }
 }
 
