--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ body {
   top: 40%;
   bottom: auto;
   background-color: rgb(0, 0, 0, 0.7);
+  border-radius: 15px;
 }
 
 .caption_Slide2 {
@@ -76,10 +77,19 @@ body {
   top: 40%;
   bottom: auto;
   background-color: rgb(0, 0, 0, 0.7);
+  border-radius: 15px;
 
   /* Text Alignment */
   text-align: right;
   padding-right: 5%;
+}
+
+.caption_Slide3 {
+  /* Positioning and Background Color */
+  top: 40%;
+  bottom: auto;
+  background-color: rgb(0, 0, 0, 0.7);
+  border-radius: 15px;
 }
 
 .carouselImage_mobileSizing {
